# nobs

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  benchmark_report.json  generate_synthetic_results.py  main.py  mkdocs.yml  pyproject.toml
docs/: contributing.md  index.md  metrics.md  results.md
example_results/: report_AMD-Workstation.json  report_Intel-Test.json  report_Mac15,6.json  report_Mac16,6.json  report_PC-Gaming.json
results/: report_ASUSTeK COMPUTER INC. ASUS Vivobook Pro 15 N6506MV_N6506MV 1.0.json  report_ASUSTeK COMPUTER INC. ASUS Vivobook Pro 15 N6506MV_N6506MV 1.0_5b4a8d72.json  report_ASUSTeK COMPUTER INC. ASUS Vivobook Pro 15 N6506MV_N6506MV 1.0_b1aee114.json  report_Mac16,6.json  report_Mac16,6_5b1fbbcc.json  report_Mac16,6_5e061669.json  report_Mac16,6_66aaa6c0.json  report_OpenStack Foundation OpenStack Nova 26.3.1_57c0059c.json  report_OpenStack Foundation OpenStack Nova 26.3.1_68abaf22.json  report_OpenStack Foundation OpenStack Nova 26.3.1_b3f01041.json  report_OpenStack Foundation OpenStack Nova 26.3.1_be10dd1b.json  report_OpenStack Nova 26.0.7-1_df164a82.json  report_synth_Arc-A770-Lab.json  report_synth_Mac14_7.json  report_synth_Mac16_10.json  report_synth_Mac16_10.json 01-37-21-656.json  report_synth_RTX4060Ti-PC.json  report_synth_RTX4060Ti-PC.json 01-37-21-660.json  report_synth_Radeon-Workstation.json
src/: device_info.py  generate_results_table.py  lm_studio_setup.py  memory_cleaner.py  ollama_setup.py  plot_embeddings_metrics.py  plot_llm_metrics.py  plot_vlm_metrics.py  power_metrics.py  score.py  settings.py
(+56 files in other folders)
