[project]
name = "nobs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "numpy>=2.3.4",
    "psutil>=7.1.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.1",
    "sentencepiece>=0.2.1",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
